# layer-forge

./: .gitignore  CMakeLists.txt  Makefile  README.md  forge_cli
include/: compute.hpp  context.hpp  engine.hpp  gguf_parser.hpp  layer_forge.hpp  layers.hpp  mmap.hpp  tensor.hpp
src/: engine.cpp  main.cpp  server.cpp
src/core/: compute.cpp
src/layers/: layers.cpp
src/model/: gguf_parser.cpp
tests/: repro_issues.cpp
